welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:6: error: type mismatch;
 found   : Unit
 required: Boolean
	}else if(temp1==0 && temp2>=100 ||temp1>=100 && temp2==0){
              ^